# MLSys

./: .gitignore  CLAUDE.md  PROBLEM.md  README.md  analysis.txt  analyze.py  check_scores.py  colab_bench.ipynb  deep_analysis.txt  deep_analyze.py  get_sum.py  scores_output.txt  status.txt  theoretical_min.py  theory.txt
competition/: Dockerfile  evaluate.py  results.txt  test_evaluate.py
competition/benchmarks/: mlsys-2026-1.json  mlsys-2026-13.json  mlsys-2026-17.json  mlsys-2026-5.json  mlsys-2026-9.json
competition/v10/: main.cpp
competition/v14/: scheduler.cpp
competition/v16/: scheduler.cpp
competition/v17/: scheduler.cpp
competition/v18/: main.cpp  scheduler.cpp
competition/v19/: scheduler.cpp
competition/v20/: scheduler.cpp
competition/v21/: main.cpp  mlsys_linux  mlsys_static  scheduler.cpp  wsl_run.py
competition/v21/source/: scheduler.cpp
pdf/: gen_pdf.py  writeup.md  writeup.typ
solution/: CMakeLists.txt  Dockerfile  calculate_scores.py  check_v10.py  check_v10_output.txt  compare.py  eval_docker.py  mlsys  report.py  scheduler.cpp  scheduler.h  scheduler_v10.cpp  scores_to_json.py  solucion.md  timing.py  timing_report.py  wsl_bench.py
solution builder/: .gitignore  Dockerfile  README.md  build_submission.ps1  main.cpp  run_test.py  scheduler.h  wsl_run_bench.py
solution/submission/: mlsys
solution/submission/source/: main.cpp  scheduler.cpp
